--- a/source/stylesheets/components/_index.scss
+++ b/source/stylesheets/components/_index.scss
@@ -4,3 +4,7 @@
 @import "typography";
 @import "buttons";
 @import "card";
+@import "progress";
+@import "member-group";
+@import "form";
+@import "breadcrumb";
