--- a/source/stylesheets/components/_typography.scss
+++ b/source/stylesheets/components/_typography.scss
@@ -2,7 +2,24 @@
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, label, p {
 	margin: 0;
 }
+h1, .h1 {
+	font-size: 24px;
+}
 
+.font-14 {
+	font-size:14px;
+}
+.font-16 {
+	font-size:16px;
+}
+.font-18 {
+	font-size:18px;
+}
+
+
+.small {
+	font-size: 11px;
+}
 .fa-1 {
 	font-size: 1em;
 }
@@ -13,6 +30,48 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, label, p {
 	font-size: 3em;
 }
 
+
+// text color helpers
 .color-white {
 	color: #fff;
+}
+.color-grey-light {
+	color: $grey-light;
+}
+.color-grey {
+	color: $grey;
+}
+.color-blue {
+	color: $blue;
+}
+.color-blue-2 {
+	color: #1673BC;
+}
+.color-blue-dark {
+	color: $blue-dark;
+}
+.color-green {
+	color: $green;
+}
+
+
+// text weight helpers
+.text-medium {
+	font-weight: 700;
+}
+.text-bold {
+	font-weight: bolder;
+}
+.text-light {
+	font-weight: lighter;
+}
+.text-italic{
+	font-style: italic;
+}
+.text-condensed {
+	font-family: $header-font;	
+}
+
+legend {
+	border: none;
 }
