--- a/source/stylesheets/config/_bootstrap_variables.scss
+++ b/source/stylesheets/config/_bootstrap_variables.scss
@@ -23,3 +23,10 @@ $brand-warning:   $orange;
 $border-radius-base:  0px;
 $border-radius-large: 0px;
 $border-radius-small: 0px;
+
+// Badge color
+$badge-bg: $brand-primary;
+
+// Labels
+$label-default-bg: #fff;
+$label-primary-bg: #194361;
