--- a/source/transition-2.html.erb
+++ b/source/transition-2.html.erb
@@ -1,25 +1,23 @@
-  <div class="container">
-    <div class="row pt">
-      <div class="col-sm-8">
-        Selection > Categorizarion > Connection PBSOL > Contradictions > Business Drivers > Evaluation criteria > Evaluation
+  <div class="container mt">
+    <div class="row">
+      <div class="col-sm-9">
+        <ul class="breadcrumbs">
+          <li>Sélection</li>
+          <li>Categorizarion</li>
+          <li>Extraction</li>
+          <li>Contradictions</li>
+          <li class="active">Business Drivers</li>
+          <li class="next">Evaluation criteria</li>
+          <li class="next">Evaluation</li>
+        </ul>
       </div>
-      <div class="col-sm-4">
-          Progress <br>
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 10%;">
-              <span>10% Complete</span>
-            </div>
-          </div>
+      <div class="col-sm-3">
+          <%= partial "partials/progress", :locals => { :percentage => "20", :step_name => "Patent analysis" } %>
       </div>
-    </div>
+  </div>
   </div>
 
 <div class="text-center padded"><%= image_tag "pixseb-logo.jpeg", width:"300" %></div>
 
 
-<nav class="navbar navbar-default navbar-fixed-bottom">
-	<div class="pull-right">
-		Saving…
-		By Denis C. - INSA
-		  <%= link_to("Please wait...", "analysis-3.html", class:"btn btn-primary btn-lg") %></div>
-</nav>
+<%= partial "partials/action-bar", :locals => { :text => "Saving...",:text2 => "Par Denis C. - INSA", :link => "analysis-2.html", :link_back => "transition-1.html" } %>
