--- a/source/analysis-2.html.erb
+++ b/source/analysis-2.html.erb
@@ -1,53 +1,59 @@
-<div class="panel panel-default">
-  <div class="container">
+<%= partial "partials/second-nav" %>
+
+<div class="container mt mb+">
     <div class="row">
-      <div class="col-sm-8">
-        <p class="text-left">Selection > Categorizarion > Connection PBSOL > Contradictions > Business Drivers > Evaluation criteria > Evaluation</p>
-        <p class="text-left">
-          Select a variety of relevant patents for the project
-        </p>
+      <div class="col-sm-9">
+        <ul class="breadcrumbs">
+          <li>Sélection</li>
+          <li class="active">Categorizarion</li>
+          <li>Extraction</li>
+          <li>Contradictions</li>
+          <li>Business Drivers</li>
+          <li class="next">Evaluation criteria</li>
+          <li class="next">Evaluation</li>
+        </ul>
+        <p class="text-left text-italic color-grey text-light mt-">Select a variety of relevant patents for the project</p>
       </div>
-      <div class="col-sm-4">
-          Progress <br>
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
-              30% Complete
-            </div>
-          </div>
+      <div class="col-sm-3">
+          <%= partial "partials/progress", :locals => { :percentage => "60", :step_name => "Patent analysis" } %>
       </div>
-    </div>
   </div>
 </div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm-8">
-      <div class="row">
-        <div class="pull-left col-sm-9">
-          <input type="search" name="" id="input" class="form-control" value="Keywords, patent number"  title="">
-        </div>
-        <a href="#" class="btn btn-primary pull-left">Search</a>
+<div class="container mb+ pb+">
+  <div class="row df">
+    <div class="col-sm-8 pr0">
+      <div class="card p card--separator">
+        <h1 class="mt">24 Selected patents</h1>
       </div>
-      
-
       <% for i in 0..4 do %>
-        <div class="panel bg-grey mb- p">
-            <div class="clearfix">
-              <i class="fa fa-file-image-o fa-2 color-white pull-left"></i>
-              
-              <p class="pull-left">Positive retraction latch locking dog for a rotating control …</p>
-            </div>
-          
-            <span class="label label-primary">LER Pawl on excentric + 2nd pawl <i class="fa fa-times"></i></span>
-            <span class="label label-primary">LER Pawl on excentric + 2nd pawl <i class="fa fa-times"></i></span>
-            <span class="label label-primary">LER Pawl on excentric + 2nd pawl <i class="fa fa-times"></i></span>
+        <div class="df card card--separator p">
+          <div class="card__file" style="background-image: url(images/plan.png);">
+            <span></span>
+            <i class="fa fa-file-text-o color-grey fa-2"></i>
+          </div>
+          <div class="pl pr">
+            
+            <h3 class="text-bold h4 mb color-blue-dark">Positive retraction latch locking dog for a rotating control …</h3>
 
+            <div class="drop-area p clearfix">
+              <% for i in 0..2 do %>
+                <span class="label label-default pull-left mr- mb- df at-c">
+                  <i class="ionicons ion-pricetag color-grey-light mr- font-14 pull-left"></i>
+                  <span class="label__text">LER Pawl on excentric + 2nd pawl</span>
+                  <i class="ionicons ion-android-close pull-right color-grey-light font-14 ml"></i>
+                </span>
+              <% end %>
+            </div>
+            
+            
+          </div>
         </div>
       <% end %>
 
     </div>
-    <div class="col-sm-4">
-      <div class="bg-black p">
+    <div class="col-sm-4 df pl0">
+      <div class="bg-dark-blue-2 p f-1-0-auto">
         <div class="clearfix">
           <p class="color-white pull-left mb">Suggested categories</p>
           <a href="#" class="pull-right color-white">Edit</a>
@@ -55,8 +61,12 @@
           <% for i in 0..6 do %>
               
               <div class="clearfix">
-                <span class="label label-primary pull-left mr-">LER Pawl on excentric + 2nd pawl <i class="fa fa-times"></i></span>
-                <div class="pull-left color-white"><%= Random.rand(30) %></div>
+                <span class="label label-primary pull-left mr- mb- df at-c">
+                  <i class="ionicons ion-pricetag color-grey-light mr- font-14 pull-left"></i>
+                  <span class="label__text">LER Pawl on excentric + 2nd pawl</span>
+                  <i class="ionicons ion-android-close pull-right color-grey-light font-14 ml"></i>
+                </span>
+                <div class="pull-left color-blue text-condensed font-14"><%= Random.rand(30) %></div>
               </div>
 
           <% end %>
@@ -67,13 +77,4 @@
 
 
 
-<nav class="navbar navbar-default navbar-fixed-bottom">
-  <div class="pull-left">
-    <i class="fa fa-arrow-left"></i>
-    <%= link_to("Back", "transition.html") %>
-  </div>
-  <div class="pull-right">
-    Last modified on 03/12/2017 at 12:17,
-    By Denis C. - INSA
-      <%= link_to("Continue", "transition-2.html", class:"btn btn-primary btn-lg") %></div>
-</nav>
+<%= partial "partials/action-bar", :locals => { :text => "Last modified on 03/12/2017 à 12:17,",:text2 => "Par Denis C. - INSA", :link => "transition-3.html", :link_back => "analysis-2.html" } %>
