--- a/source/analysis-3.html.erb
+++ b/source/analysis-3.html.erb
@@ -1,66 +1,108 @@
-<div class="panel panel-default p">
-  <div class="container">
+<%= partial "partials/second-nav" %>
+
+
+<div class="container mt mb+">
     <div class="row">
-      <div class="col-sm-8">
-        <p class="text-left">Selection > Categorizarion > Connection PBSOL > Contradictions > Business Drivers > Evaluation criteria > Evaluation</p>
-        <p class="text-left">
-          Select a variety of relevant patents for the project
-        </p>
+      <div class="col-sm-9">
+        <ul class="breadcrumbs">
+          <li>Sélection</li>
+          <li>Categorizarion</li>
+          <li class="active">Connection PBSOL</li>
+          <li>Contradictions</li>
+          <li>Business Drivers</li>
+          <li class="next">Evaluation criteria</li>
+          <li class="next">Evaluation</li>
+        </ul>
+        <p class="text-left text-italic color-grey text-light mt-">Select a variety of relevant patents for the project</p>
       </div>
-      <div class="col-sm-4">
-          Progress <br>
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
-              40% Complete
-            </div>
+      <div class="col-sm-3">
+          <%= partial "partials/progress", :locals => { :percentage => "40", :step_name => "Patent analysis" } %>
+      </div>
+  </div>
+</div>
+
+
+
+<div class="container mb+ pb+">
+  <div class="row df mb+ pb+">
+    <div class="col-sm-6 df pr0">
+      <div class="bg-white p">
+        <div class="clearfix mb mt">
+          <h1 class="pull-left">81 Problems</h1>
+          <div class="pull-right"><a href="#" class="btn btn-default color-blue">Edit</a></div>
+        </div>
+        <a href="#" class="btn btn--plus mb">Add a problem</a>
+        
+        <% for i in 0..2 do %>
+          <div class="mini-card mini-card--pink selected df at-c mb- p mr">
+      
+              <div class="clearfix">
+                <i class="fa fa-puzzle-piece fa-2 color-white pull-left"></i>
+                
+                <p class="pull-left color-white">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+              </div>
+              
+              <div class="mini-card__anchor">
+                <span></span>
+              </div>
           </div>
+        <% end %>
+
+        <% for i in 0..2 do %>
+          <div class="mini-card mini-card--pink df at-c mb- p mr">
+      
+              <div class="clearfix">
+                <i class="fa fa-puzzle-piece fa-2 color-white pull-left"></i>
+                
+                <p class="pull-left">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+              </div>
+
+              <div class="mini-card__anchor">
+                <span></span>
+              </div>
+      
+          </div>
+        <% end %>
+      </div>
+    </div>
+
+    <div class="col-sm-6 df pl0">
+      <div class="bg-dark-blue-2 p">
+          <div class="clearfix mb mt">
+            <h1 class="pull-left color-white">81 partial solutions</h1>
+            <div class="pull-right"><a href="#" class="btn btn-default bg-dark-blue-2 color-white">Edit</a></div>
+          </div>
+
+          <a href="#" class="btn btn--plus mb">Add a problem</a>
+
+            <div class="mini-card mini-card--green selected mini-card df at-c mb- p">
+
+                  <div class="clearfix">
+                    <i class="fa fa-lightbulb-o color-white pull-left fa-2"></i>
+                    
+                    <p class="pull-left color-white">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+                  </div>
+
+              </div>
+
+          <% for i in 0..6 do %>
+              
+              <div class="mini-card mini-card--green  df at-c mb- p">
+
+                    <div class="clearfix">
+                      <i class="fa fa-lightbulb-o color-green pull-left fa-2"></i>
+                      
+                      <p class="pull-left color-green">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+                    </div>
+
+                </div>
+
+          <% end %>
       </div>
     </div>
   </div>
 </div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm-6">
-    <div class="clearfix mb">
-      <div class="pull-left">81 Problems</div>
-      <div class="pull-right"><a href="#" class="btn btn-info">Edit</a></div>
-    </div>
-      <a href="#" class="btn btn-success btn-block btn-pill mb">Add a problem</a>
-      <% for i in 0..10 do %>
-        <div class="panel bg-grey mb- p">
-
-            <div class="clearfix">
-              <i class="fa fa-file-image-o fa-2 color-white pull-left"></i>
-              
-              <p class="pull-left">Positive retraction latch locking dog for a rotating control …</p>
-            </div>
-
-        </div>
-      <% end %>
-
-    </div>
-    <div class="col-sm-6">
-      <div class="clearfix mb">
-        <div class="pull-left">81 partial solutions</div>
-        <div class="pull-right"><a href="#" class="btn btn-info">Edit</a></div>
-      </div>
-      <a href="#" class="btn btn-success btn-block btn-pill mb">Add a a partial solution</a>
-      <% for i in 0..8 do %>
-        <div class="panel bg-grey mb- p">
-
-            <div class="clearfix">
-              <i class="fa fa-file-image-o fa-2 color-white pull-left"></i>
-              
-              <p class="pull-left">Positive retraction latch locking dog for a rotating control …</p>
-            </div>
-
-        </div>
-      <% end %>
-
-    </div>
-  </div>
-</div>
 
 
 <nav class="navbar navbar-default navbar-fixed-bottom" style="bottom: 50px">
@@ -72,13 +114,4 @@
 </nav>
 
 
-<nav class="navbar navbar-default navbar-fixed-bottom">
-  <div class="pull-left">
-    <i class="fa fa-arrow-left"></i>
-    <%= link_to("Back", "transition.html") %>
-  </div>
-  <div class="pull-right">
-    Last modified on 03/12/2017 at 12:17,
-    By Denis C. - INSA
-      <%= link_to("Continue", "transition-3.html", class:"btn btn-primary btn-lg") %></div>
-</nav>
+<%= partial "partials/action-bar", :locals => { :text => "Last modified on 03/12/2017 à 12:17,",:text2 => "Par Denis C. - INSA", :link => "transition-4.html", :link_back => "analysis-3.html" } %>
