--- a/source/analysis.html.erb
+++ b/source/analysis.html.erb
@@ -1,58 +1,103 @@
-<div class="panel panel-default">
-  <div class="container">
+<%= partial "partials/second-nav" %>
+
+<div class="container mt mb+">
     <div class="row">
-      <div class="col-sm-8">
-        <p class="text-left">Selection > Categorizarion > Connection PBSOL > Contradictions > Business Drivers > Evaluation criteria > Evaluation</p>
-        <p class="text-left">
-          Select a variety of relevant patents for the project
-        </p>
+      <div class="col-sm-9">
+        <ul class="breadcrumbs">
+          <li>Sélection</li>
+          <li>Categorizarion</li>
+          <li>Extraction</li>
+          <li>Contradictions</li>
+          <li class="active">Business Drivers</li>
+          <li class="next">Evaluation criteria</li>
+          <li class="next">Evaluation</li>
+        </ul>
       </div>
-      <div class="col-sm-4">
-          Progress <br>
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 20%;">
-              20% Complete
-            </div>
-          </div>
+      <div class="col-sm-3">
+          <%= partial "partials/progress", :locals => { :percentage => "60", :step_name => "Patent analysis" } %>
       </div>
-    </div>
   </div>
 </div>
 
-<div class="container">
+<div class="container mb+ pb+">
+
+    <div class="card p mb">
+        <div class="row mb">
+          <div class="col-sm-10">
+            <input type="search" name="" id="input" class="form-control search-input" value="Keywords, patent number"  title="">
+          </div>
+          <a href="#" class="btn btn-primary col-sm-2"><i class="ionicons ion-ios-search-strong search-icon"></i>Search</a>
+        </div>
+        <ul class="list-inline">
+          <li><a href="">International <i class="fa fa-angle-down"></i></a></li>
+          <li><a href="">All fields <i class="fa fa-angle-down"></i></a></li>
+          <li><a href="">All content <i class="fa fa-angle-down"></i></a></li>
+          <li><a href="">Any date <i class="fa fa-angle-down"></i></a></li>
+          <li><a href="">Sort by relevancy <i class="fa fa-angle-down"></i></a></li>
+        </ul>
+    </div>
+
   <div class="row">
     <div class="col-sm-8">
-      <div class="row">
-        <div class="pull-left col-sm-9">
-          <input type="search" name="" id="input" class="form-control" value="Keywords, patent number"  title="">
-        </div>
-        <a href="#" class="btn btn-primary pull-left">Search</a>
-      </div>
-      <ul class="list-inline p">
-        <li><a href="">International <i class="fa fa-angle-down"></i></a></li>
-        <li><a href="">All fields <i class="fa fa-angle-down"></i></a></li>
-        <li><a href="">All content <i class="fa fa-angle-down"></i></a></li>
-        <li><a href="">Any date <i class="fa fa-angle-down"></i></a></li>
-        <li><a href="">Sort by relevancy <i class="fa fa-angle-down"></i></a></li>
-      </ul>
+          <div class="df card card--separator pl pr pt- pb-">
+                <div class="card__file">
+                  <span></span>
+                  <i class="fa fa-file-text-o color-grey fa-2"></i>
+                </div>
+                <div class="p">
+                  
+                  <h3 class="text-bold h4 mb color-blue-dark">Electric power assisted door lock</h3>
+                  
+                  <p class="mb">With the door closed, the bolt-plate (2) notch (9) retains the door-jamb hasp bar (11,13), since the catch (3) prevents the forces opposed by the return spring (14) and compressed peripheral door seal (16) from rotating (F3)…</p>
+                
+                  <div class="clearfix">
+                    <p class="text-uppercase color-grey-light font-14 pull-left">DUPONT PATRICK [FR]; JACQUINET PHILIPPE [FR] <br> + VALEO SECURITE HABITACLE</p>
+                      
+                      <span class="added pull-right"><span class="added__check"><i class="ionicons ion-android-done"></i></span>Added</span>
+                  </div>
+                </div>
+              </div>
+          <% for i in 0..2 do %>
+              <div class="df card card--separator pl pr pt- pb-">
+                <div class="card__file" style="background-image: url(images/plan.png);">
+                  <span></span>
+                  <i class="fa fa-file-text-o color-grey fa-2"></i>
+                </div>
+                <div class="p">
+                  
+                  <h3 class="text-bold h4 mb color-blue-dark">Electric power assisted door lock</h3>
+                  
+                  <p class="mb">With the door closed, the bolt-plate (2) notch (9) retains the door-jamb hasp bar (11,13), since the catch (3) prevents the forces opposed by the return spring (14) and compressed peripheral door seal (16) from rotating (F3)…</p>
+                
+                  <div class="clearfix">
+                    <p class="text-uppercase color-grey-light font-14 pull-left">DUPONT PATRICK [FR]; JACQUINET PHILIPPE [FR] <br> + VALEO SECURITE HABITACLE</p>
+                      
+                      <a href="#" class="btn btn--plus pull-right">Add</a>
+                  </div>
+                  </div>
+              </div>
+          <% end %>
 
-      <% for i in 0..2 do %>
-        <div class="card bg-white mb-">
-          <div class="card__left bg-grey p">
-            <i class="fa fa-file-image-o color-white"></i>
-          </div>
-          <div class="card__body p">
-            
-            <p>Electric power assisted door lock
-              With the door closed, the bolt-plate (2) notch (9) retains the door-jamb hasp bar (11,13), since the catch (3) prevents the forces opposed by the return spring (14) and compressed peripheral door seal (16) from rotating (F3) …
-              DUPONT PATRICK [FR]; JACQUINET PHILIPPE [FR]  +
-              VALEO SECURITE HABITACLE</p>
-
-              <a href="#" class="btn btn-success pull-right">Add</a>
-          </div>
-        </div>
-      <% end %>
-
+          <% for i in 0..2 do %>
+              <div class="df card card--separator pl pr pt- pb-">
+                <div class="card__file">
+                  <span></span>
+                  <i class="fa fa-file-text-o color-grey fa-2"></i>
+                </div>
+                <div class="p">
+                  
+                  <h3 class="text-bold h4 mb color-blue-dark">Electric power assisted door lock</h3>
+                  
+                  <p class="mb">With the door closed, the bolt-plate (2) notch (9) retains the door-jamb hasp bar (11,13), since the catch (3) prevents the forces opposed by the return spring (14) and compressed peripheral door seal (16) from rotating (F3)…</p>
+                
+                  <div class="clearfix">
+                    <p class="text-uppercase color-grey-light font-14 pull-left">DUPONT PATRICK [FR]; JACQUINET PHILIPPE [FR] <br> + VALEO SECURITE HABITACLE</p>
+                      
+                      <a href="#" class="btn btn--plus pull-right">Add</a>
+                                    </div>
+                  </div>
+              </div>
+          <% end %>
     </div>
     <div class="col-sm-4">
       <div class="bg-black p">
@@ -75,13 +120,4 @@
 
 
 
-<nav class="navbar navbar-default navbar-fixed-bottom">
-  <div class="pull-left">
-    <i class="fa fa-arrow-left"></i>
-    <%= link_to("Back", "transition.html") %>
-  </div>
-  <div class="pull-right">
-    Last modified on 03/12/2017 at 12:17,
-    By Denis C. - INSA
-      <%= link_to("Continue", "transition-2.html", class:"btn btn-primary btn-lg") %></div>
-</nav>
+<%= partial "partials/action-bar", :locals => { :text => "Last modified on 03/12/2017 à 12:17,",:text2 => "Par Denis C. - INSA", :link => "transition-2.html", :link_back => "analysis.html" } %>
