--- a/source/definition.html.erb
+++ b/source/definition.html.erb
@@ -1,100 +1,98 @@
-<nav class="navbar navbar-default bg-faded">
-  <div class="container">
-    <ul class="nav navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Definition</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Analysis</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">SUN Diagram</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Export</a>
-      </li>
-    </ul>
-    <span class="pull-right">3 members</span>
-  </div>
-</nav>
+---
+menu_title: E-Latch
+---
 
-<div class="alert alert-info">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-8">
-        <p class="text-left">Please enter your project name and its description. You could also add other information like te starting date and the ending date. Adding members to the projects is also possible.</p>
-      </div>
-      <div class="col-sm-4">
-          Progress <br>
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-              <span class="sr-only">60% Complete</span>
-            </div>
-          </div>
-      </div>
+
+
+<%= partial "partials/second-nav" %>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-8">
+      <p class="text-left text-italic color-grey text-light mt">Please enter your project name and its description. You could also add other information like te starting date and the ending date. Adding members to the projects is also possible.</p>
+    </div>
+    <div class="col-sm-4">
+        <%= partial "partials/progress", :locals => { :percentage => "10", :step_name => "Patent analysis" } %>
     </div>
   </div>
 </div>
 
-<div class="container">
+<div class="container mt+ pb+ mb+">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3">
       <form action="" method="POST" role="form">
-        <legend>Your new SUN Diagram</legend>
-      
-        <div class="form-group">
-          <label for="">SUN Diagram name</label>
-          <input type="text" class="form-control" id="" placeholder="Input field">
-        </div>
-      
-        <div class="form-group">
-          <label for="">SUN Diagram name</label>
-          <textarea name="" id="" cols="30" rows="10" class="form-control"></textarea>
-        </div>
-        
-        <div class="row mb">
-          <div class="col-xs-6">
-              Start date
-          </div>
-          <div class="col-xs-6">
-              End date
+        <legend class="color-grey text-bold">Your new SUN Diagram</legend>
+
+        <div class="card p mb">
+          <div class="input-wrap js-float-label-wrapper">
+            <label for="">SUN Diagram name</label>
+            <input type="text" name="id" id="id" class="form-control">
           </div>
         </div>
+
+        <div class="card p mb">
+          <div class="input-wrap js-float-label-wrapper">
+            <label for="">Description</label>
+            <textarea name="" id="" cols="30" rows="10" class="form-control"></textarea>
+          </div>
+        </div>
+      
         
-        <div class="bg-white clearfix mb p">
-          Members
-          <% for i in 0..2 do %>
+        <div class="card p mb">
+          <div class="row">
+            <div class="col-xs-6">
+                <div class="input-group date" data-provide="datepicker">
+                    <input type="text" class="form-control" placeholder="Start date">
+                    <div class="input-group-addon p0">
+                      <i class="ionicons ion-chevron-down"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-6">
+                <div class="input-group date" data-provide="datepicker">
+                    <input type="text" class="form-control" placeholder="End date">
+                    <div class="input-group-addon p0">
+                      <i class="ionicons ion-chevron-down"></i>
+                    </div>
+                </div>
+            </div>
+          </div>
+        </div>
+        
+        <div class="card clearfix mb p">
+          <p class="color-grey-light font-14 mb">Members</p>
+          <% for i in 1..3 do %>
           <div class="clearfix mb">
-            <img src="http://placehold.it/50x50" alt="" class="img-circle pull-left mr">
-            <div class="pull-left">
-              <p>Denis Cavallucci</p>
-              <a href="#"><small>Delete</small></a>
+            <%= image_tag "images/face-#{i}.jpg", class:"img-circle pull-left mr", width:"45" %>
+            <div class="clearfix mt-">
+              <p class="pull-left color-grey">Denis Cavallucci</p>
+              <a href="#" class="pull-right  color-grey-light"><i class="ionicons ion-close"></i></a>
             </div>
           </div>
           <% end %>
-          <a href="#" class="btn btn-success btn-block">Add a member</a>
+          <a href="#" class="btn btn--plus mt">Add a member</a>
         </div>
 
-        <div class="bg-white clearfix mb p">
-          Files &amp; usefull links
+        <div class="card clearfix mb p">
+          <p class="color-grey-light font-14 mb">Files &amp; usefull links</p>
           <% for i in 0..2 do %>
           <div class="clearfix mb">
-            <i class="fa fa-file-o pull-left mr"></i>
-            <div class="pull-left">
-              <p>Rapport_20129282.docx</p>
-              <div class="list-inline">
+            <i class="ionicons ion-document pull-left mr icon-circle"></i>
+            <div class="clearfix mt-">
+              <p class="pull-left color-grey">Rapport_20129282.docx</p>
+              <div class="pull-right list-inline">
                 <li>
-                  <a href="#"><small>Read</small></a>
+                  <a href="#" class="color-grey-light"><i class="ionicons ion-eye font-18"></i></a>
                 </li>
-                <li>|</li>
                 <li>
-                  <a href="#"><small>Delete</small></a>
+                  <a href="#" class="color-grey-light"><i class="ionicons ion-close"></i></a>
                 </li>
               </div>
             </div>
           </div>
           <% end %>
-          <a href="#" class="btn btn-success btn-block">Add a member</a>
+          <a href="#" class="btn btn--plus mt">Add a member</a>
         </div>
           
       </form>
@@ -102,7 +100,5 @@
   </div>
 </div><!-- container -->
 
-<nav class="navbar navbar-default navbar-fixed-bottom">
-  <%= link_to("Continue", "transition-1.html") %>
-</nav>
+<%= partial "partials/action-bar", :locals => { :text => "Last modified on 03/12/2017 à 12:17,",:text2 => "Par Denis C. - INSA", :link => "transition-1.html", :link_back => "index.html" } %>
 
