--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,22 +2,42 @@
 title: Welcome to Pixseb
 ---
 
-<nav class="navbar navbar-default bg-faded">
-  <div class="container">
-    <ul class="nav navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Definition</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Analysis</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">SUN Diagram</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Export</a>
-      </li>
-    </ul>
-    <span class="pull-right">3 members</span>
+<nav class="navbar navbar-default navbar-secondary bg-faded pt pb">
+  <div class="container text-center ">
+  	<%= link_to("New", "definition.html" , class:"btn btn--plus pull-left") %>
+    <h1 class="text-bold color-grey mt--">Your SUN diagrams</h1>
   </div>
 </nav>
+
+
+<div class="container">
+	<div class="row">
+		<% for i in 1..3 do %>
+		<div class="col-sm-4">
+			<div class="card">
+				<%= image_tag "http://placehold.it/300x200", width:"100%" %>
+				<div class="card__footer p">
+					<div class="clearfix mb-">
+						<p class="pull-left color-grey text-bold">Project 42</p>
+						<p class="pull-right">In progress</p>
+					</div>
+					<div class="clearfix">
+						<div class="pull-left">
+							<div class="member-group">
+							        <span class="member-group__avatar">
+							          <%= image_tag "images/face-1.jpg", class:"", width:"25" %></span>
+							        <span class="member-group__avatar"><%= image_tag "images/face-2.jpg", class:"", width:"25" %></span>
+							        <span class="member-group__avatar"><%= image_tag "images/face-3.jpg", class:"", width:"25" %></span>
+							        <span class="member-group__text">3 MEMBERS</span>
+							      </div>
+						</div>
+						<div class="pull-right">
+							03/12/17 at 12:17
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<% end %>
+	</div>
+</div>
