--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -1,14 +1,85 @@
 .card {
 	text-decoration: none;
-	display: flex;
 	background: #FFFFFF;
 	box-shadow: 0 2px 2px 0 rgba(18,25,34,0.22);
-	&__left {
-		float: left;
-	}
-
 	&__title {
-		color: $gray;
+		color: $grey;
 		font-size: 20px;
+	}
+	&__file {
+		background-color: #EFF2F3;
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: center center;
+		position: relative;
+		overflow: hidden;
+		min-width: 100px;
+		min-height: 150px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		span {
+			display: block;
+			position: absolute;
+			top: 0;
+			right: 0;
+			left: 0;
+			bottom: 0;
+			background: rgba(231,234,236,0.75);
+		}
+		i {
+			position: relative;
+			z-index: 9;
+		}
+	}
+	&--separator {
+		border-bottom: solid 2px $light;
+	}
+}
+
+
+.mini-card {
+	border-radius: 6px;
+	background: #fff;
+	position: relative;
+	&--pink {
+		border: solid 1px #F7B4C7;
+		border-right: solid 3px $pink;
+		&.selected {
+			border: none;
+			background: $pink;
+		}
+	}
+	&--green {
+		border: solid 1px #a1E3DF;
+		border-left: solid 3px $green;
+		&.selected {
+			border: none;
+			background: $green;
+		}
+	}
+	&__anchor {
+		position: absolute;
+		color: #fff;
+		display: block;
+		right: -18px;
+		top: 50%;
+		width: 36px;
+		height: 36px;
+		margin-top: -18px;
+		background: rgba(235,42,93,0.20);
+		line-height: 36px;
+		text-align: center;
+		border-radius: 50%;
+		padding: 8px;
+		span {
+			width: 21px;
+			height: 21px;
+			display: block;
+			border: solid 4px #fff;
+			background: $pink;
+			border-radius: 50%;
+			box-shadow: 0 0 5px 0 rgba(0,0,0,0.35);
+		}
 	}
 }
