--- a/source/stylesheets/config/_variables.scss
+++ b/source/stylesheets/config/_variables.scss
@@ -2,9 +2,9 @@
  * Fonts
  * ------------------------------------- */
 // Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
-$base-font: "Open Sans", "Helvetica", "sans-serif";
-$header-font: "Raleway", "Helvetica", "sans-serif";
+@import url("https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed");
+$base-font: "Roboto", "Helvetica", "sans-serif";
+$header-font: "Roboto Condensed", "Helvetica", "sans-serif";
 
 // Local fonts (uncomment following lines)
 // @font-face {
@@ -24,11 +24,17 @@ $base-height: 1.4;
  * Colors
  * ------------------------------------- */
 // Scheme
-$brand-color: #D23333;
+$brand-color: #506270;
 
 $red: #EE5F5B;
-$blue: #314782;
+$blue: #53B6EB;
+$blue-2: #1673BC;
+$blue-dark: #17212A;
 $yellow: #FDB631;
 $orange: #E67E22;
-$green: #32B796;
-$gray: #9EA5AE;
+$green: #00A297;
+$grey: #506270;
+$grey-light:#AEB9BF;
+$grey-lighter:#DEE3E6;
+$light: #E8ECEF;
+$pink : #EB2B5E;
