--- a/source/stylesheets/layout/_navbar.scss
+++ b/source/stylesheets/layout/_navbar.scss
@@ -1,25 +1,69 @@
 
 // BOOTSTRAP'S NAVIGATION OVERIDE 
 .navbar {
-  // background: #fff;
-  // background: rgba(255, 255, 255, .95);
-  // border-bottom: solid 1px $gray;
-
-  // &-brand {
-  //   padding: 10px 15px;
-  // }
-
 }
 
-.nav-link {
-  text-transform: uppercase;
-  color: $gray;
-  font-weight: 300;
-  .active &{
-    background: $blue;
-    color: #fff;
-    &:hover {
-      background: darken($blue, 10);
+.navbar-primary{
+  background: #FFFFFF;
+  border-bottom: solid 2px $light;
+
+  .navbar-brand {
+    padding-top: 20px;
+    color: $grey;
+    height: auto;
+    font-weight: 700;
+  }
+  .nav-link {
+    text-transform: uppercase;
+    color: $grey;
+    font-weight: 300;
+    border-right: solid 1px $light;
+  }
+
+} 
+
+.navbar-secondary {
+  background: #FFFFFF;
+  border-bottom: none;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.10);
+  .nav-link {
+    font-size: 18px;
+    color: $grey-light;
+    font-weight: bold;
+    margin-right: 60px;
+  }
+  .nav-item.active .nav-link {
+    color: $blue;
+    position: relative;
+    &:before {
+      content: "";
+      display: block;
+      background: $blue;
+      width: 50%;
+      height: 3px;
+      position: absolute;
+      bottom: -7px;
+      left: 0pc;
     }
+    &:after {
+      content: "";
+      display: block;
+      background: #fff;
+      border: solid 3px $blue;  
+      border-radius: 50%;
+      width: 12px;
+      height: 12px;
+      position: absolute;
+      bottom: -11px;
+      left: 50%;
+    }
+  }
+}
+
+.navbar-action {
+  background: $blue-2;
+  border-bottom: none;
+  p {
+    font-size: 14px;
   }
 }
