--- a/source/partials/_action-bar.html.erb
+++ b/source/partials/_action-bar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-action navbar-fixed-bottom p-">
 	
-	<%= link_to("Back", "#{link_back}", class: "btn btn-blue-2 color-white pull-left") %>
+	<%= link_to("Back", "#{link_back}", class: "btn btn-outline color-white pull-left") %>
 
 	<div class="pull-right">
 	  	<div class="clearfix">
