--- a/source/stylesheets/components/_index.scss
+++ b/source/stylesheets/components/_index.scss
@@ -8,3 +8,9 @@
 @import "member-group";
 @import "form";
 @import "breadcrumb";
+@import "speedometer";
+@import "patent";
+@import "label";
+@import "mini-card";
+@import "slider";
+@import "sun-diagram";
