--- a/source/stylesheets/components/_typography.scss
+++ b/source/stylesheets/components/_typography.scss
@@ -47,11 +47,17 @@ h1, .h1 {
 .color-blue-2 {
 	color: #1673BC;
 }
+.color-blue-3 {
+	color: #3477A1;
+}
 .color-blue-dark {
 	color: $blue-dark;
 }
 .color-green {
 	color: $green;
+}
+.color-pink {
+	color: $pink;
 }
 
 
