--- a/source/stylesheets/layout/_navbar.scss
+++ b/source/stylesheets/layout/_navbar.scss
@@ -67,3 +67,10 @@
     font-size: 14px;
   }
 }
+.navbar-action-secondary {
+  background: #fff;
+  bottom:59px;
+  height: 70px;
+  border-bottom: none;
+  box-shadow: 0 -2px 0 0 rgba(0,0,0,0.05);
+}
