--- a/source/transition-2.html.erb
+++ b/source/transition-2.html.erb
@@ -17,7 +17,7 @@
   </div>
   </div>
 
-<div class="text-center padded"><%= image_tag "pixseb-logo.jpeg", width:"300" %></div>
+<div class="text-center padded"><%= image_tag "transition.png", width:"230" %></div>
 
 
 <%= partial "partials/action-bar", :locals => { :text => "Saving...",:text2 => "Par Denis C. - INSA", :link => "analysis-2.html", :link_back => "transition-1.html" } %>
