--- a/source/analysis-3.html.erb
+++ b/source/analysis-3.html.erb
@@ -24,80 +24,197 @@
 
 
 <div class="container mb+ pb+">
+
+
+
+
+
+
+
+
+
+
   <div class="row df mb+ pb+">
     <div class="col-sm-6 df pr0">
-      <div class="bg-white p">
+      <div class="bg-white p+">
         <div class="clearfix mb mt">
-          <h1 class="pull-left">81 Problems</h1>
+          <h1 class="pull-left text-bold">81 Problems</h1>
           <div class="pull-right"><a href="#" class="btn btn-default color-blue">Edit</a></div>
         </div>
-        <a href="#" class="btn btn--plus mb">Add a problem</a>
+        <a href="#" class="btn btn--plus mb+">Add a problem</a>
         
-        <% for i in 0..2 do %>
-          <div class="mini-card mini-card--pink selected df at-c mb- p mr">
+          <!-- <div class="jtk-demo-canvas canvas-wide drag-drop-demo jtk-surface jtk-surface-nopan" id="canvas">
+            <div class="mini-card mini-card--pink" id="dragDropWindow1">one<br/><br/><a href="#" class="cmdLink hide" rel="dragDropWindow1">toggle connections</a><br/><a href="#" class="cmdLink drag" rel="dragDropWindow1">disable dragging</a><br/><a href="#" class="cmdLink detach" rel="dragDropWindow1">detach all</a></div>
+            <div class="mini-card mini-card--pink" id="dragDropWindow2">two<br/><br/><a href="#" class="cmdLink hide" rel="dragDropWindow2">toggle connections</a><br/><a href="#" class="cmdLink drag" rel="dragDropWindow2">disable dragging</a><br/><a href="#" class="cmdLink detach" rel="dragDropWindow2">detach all</a></div>
+            <div class="mini-card mini-card--pink" id="dragDropWindow3">three<br/><br/><a href="#" class="cmdLink hide" rel="dragDropWindow3">toggle connections</a><br/><a href="#" class="cmdLink drag" rel="dragDropWindow3">disable dragging</a><br/><a href="#" class="cmdLink detach" rel="dragDropWindow3">detach all</a></div>
+            <div class="mini-card mini-card--pink" id="dragDropWindow4">four<br/><br/><a href="#" class="cmdLink hide" rel="dragDropWindow4">toggle connections</a><br/><a href="#" class="cmdLink drag" rel="dragDropWindow4">disable dragging</a><br/><a href="#" class="cmdLink detach" rel="dragDropWindow4">detach all</a></div>
+            <div id="list"></div>
+            </div> -->
+          <div class="mini-card mini-card--pink selected df at-c mb- p+ mr">
       
-              <div class="clearfix">
+              <div class="mini-card__content">
                 <i class="fa fa-puzzle-piece fa-2 color-white pull-left"></i>
                 
                 <p class="pull-left color-white">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
               </div>
               
-              <div class="mini-card__anchor">
+              <div class="mini-card__anchor" id="a">
                 <span></span>
               </div>
           </div>
-        <% end %>
+        
 
-        <% for i in 0..2 do %>
-          <div class="mini-card mini-card--pink df at-c mb- p mr">
+        
+          <div class="mini-card mini-card--pink df at-c mb- p+ mr">
       
-              <div class="clearfix">
+              <div class="mini-card__content">
                 <i class="fa fa-puzzle-piece fa-2 color-white pull-left"></i>
                 
                 <p class="pull-left">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+                <!-- <%= image_tag("LINKS.png", class:"connectors") %> -->
               </div>
 
-              <div class="mini-card__anchor">
+              <div class="mini-card__anchor" id="b">
                 <span></span>
               </div>
       
           </div>
-        <% end %>
+        
       </div>
+
     </div>
 
+
     <div class="col-sm-6 df pl0">
-      <div class="bg-dark-blue-2 p">
+      <div class="bg-dark-blue-2 p+">
           <div class="clearfix mb mt">
-            <h1 class="pull-left color-white">81 partial solutions</h1>
+            <h1 class="text-bold pull-left color-white">81 partial solutions</h1>
             <div class="pull-right"><a href="#" class="btn btn-default bg-dark-blue-2 color-white">Edit</a></div>
           </div>
 
-          <a href="#" class="btn btn--plus mb">Add a problem</a>
+          <a href="#" class="btn btn--plus mb+">Add a problem</a>
 
-            <div class="mini-card mini-card--green selected mini-card df at-c mb- p">
+            <div class="mini-card mini-card--green selected mini-card df at-c mb- p+">
 
-                  <div class="clearfix">
+                  <div class="mini-card__content">
                     <i class="fa fa-lightbulb-o color-white pull-left fa-2"></i>
                     
                     <p class="pull-left color-white">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
                   </div>
 
-              </div>
+                  <div class="mini-card__anchor">
+                    <span></span>
+                  </div>
 
-          <% for i in 0..6 do %>
+            </div>
+
+          
               
-              <div class="mini-card mini-card--green  df at-c mb- p">
+              <div class="mini-card mini-card--green  df at-c mb- p+">
 
-                    <div class="clearfix">
+                    <div class="mini-card__content">
                       <i class="fa fa-lightbulb-o color-green pull-left fa-2"></i>
                       
                       <p class="pull-left color-green">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
                     </div>
+                    
+                    <div class="mini-card__anchor" >
+                      <span></span>
+                    </div>
 
-                </div>
+              </div>
 
-          <% end %>
+              
+              <div class="mini-card mini-card--green  df at-c mb- p+">
+
+                    <div class="mini-card__content">
+                      <i class="fa fa-lightbulb-o color-green pull-left fa-2"></i>
+                      
+                      <p class="pull-left color-green">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+                    </div>
+                    
+                    <div class="mini-card__anchor">
+                      <span></span>
+                    </div>
+
+              </div>
+
+              
+              <div class="mini-card mini-card--green  df at-c mb- p+">
+
+                    <div class="mini-card__content">
+                      <i class="fa fa-lightbulb-o color-green pull-left fa-2"></i>
+                      
+                      <p class="pull-left color-green">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+                    </div>
+                    
+                    <div class="mini-card__anchor">
+                      <span></span>
+                    </div>
+
+              </div>
+
+              
+              <div class="mini-card mini-card--green  df at-c mb- p+">
+
+                    <div class="mini-card__content">
+                      <i class="fa fa-lightbulb-o color-green pull-left fa-2"></i>
+                      
+                      <p class="pull-left color-green">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+                    </div>
+                    
+                    <div class="mini-card__anchor">
+                      <span></span>
+                    </div>
+
+              </div>
+
+              
+              <div class="mini-card mini-card--green  df at-c mb- p+">
+
+                    <div class="mini-card__content">
+                      <i class="fa fa-lightbulb-o color-green pull-left fa-2"></i>
+                      
+                      <p class="pull-left color-green">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+                    </div>
+                    
+                    <div class="mini-card__anchor">
+                      <span></span>
+                    </div>
+
+              </div>
+
+              
+              <div class="mini-card mini-card--green  df at-c mb- p+" >
+
+                    <div class="mini-card__content">
+                      <i class="fa fa-lightbulb-o color-green pull-left fa-2"></i>
+                      
+                      <p class="pull-left color-green">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+                    </div>
+                    
+                    <div class="mini-card__anchor">
+                      <span></span>
+                    </div>
+
+              </div>
+
+              
+              <div class="mini-card mini-card--green  df at-c mb- p+">
+
+                    <div class="mini-card__content">
+                      <i class="fa fa-lightbulb-o color-green pull-left fa-2"></i>
+                      
+                      <p class="pull-left color-green">« When seal load increases to improve sealing, release effort must remain low on either latch positions »</p>
+                    </div>
+                    
+                    <div class="mini-card__anchor">
+                      <span></span>
+                    </div>
+
+              </div>
+
+          
       </div>
     </div>
   </div>
@@ -105,13 +222,23 @@
 
 
 
-<nav class="navbar navbar-default navbar-fixed-bottom" style="bottom: 50px">
+<nav class="navbar navbar-action-secondary navbar-fixed-bottom p">
   
+
+  <div class="pull-left df at-c">
+    <p class="font-16 text-uppercase mr">3 items selected</p>
+    <a href="#" class="btn btn--plus">Switch arrow</a>
+  </div>
+
   <div class="pull-right">
-    3 items selected
-    <a href="#" class="btn btn-primary">Link</a>
-    <a href="#" class="btn btn-info">Unlink</a>
+    <a href="#" class="btn btn-primary mr">Link</a>
+    <a href="#" class="btn btn-outline-grey">Unlink</a>
+  </div>
+
 </nav>
 
 
 <%= partial "partials/action-bar", :locals => { :text => "Last modified on 03/12/2017 à 12:17,",:text2 => "Par Denis C. - INSA", :link => "transition-4.html", :link_back => "analysis-3.html" } %>
+
+
+
