--- a/source/analysis-4.html.erb
+++ b/source/analysis-4.html.erb
@@ -1,85 +1,110 @@
-<div class="panel panel-default p">
-  <div class="container">
+<%= partial "partials/second-nav" %>
+
+<div class="container mt mb+">
+
     <div class="row">
-      <div class="col-sm-8">
-        <p class="text-left">Selection > Categorizarion > Connection PBSOL > Contradictions > Business Drivers > Evaluation criteria > Evaluation</p>
-        <p class="text-left">
-          Select a variety of relevant patents for the project
-        </p>
+      <div class="col-sm-9">
+        <ul class="breadcrumbs">
+          <li>Sélection</li>
+          <li>Categorizarion</li>
+          <li>Connection PBSOL</li>
+          <li class="active">Contradictions</li>
+          <li>Business Drivers</li>
+          <li class="next">Evaluation criteria</li>
+          <li class="next">Evaluation</li>
+        </ul>
+        <p class="text-left text-italic color-grey text-light mt-">Adjust and sort by relevance the studied contradictions</p>
       </div>
-      <div class="col-sm-4">
-          Progress <br>
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
-              50% Complete
-            </div>
-          </div>
+      <div class="col-sm-3">
+          <%= partial "partials/progress", :locals => { :percentage => "50", :step_name => "Patent analysis" } %>
       </div>
-    </div>
   </div>
+
 </div>
 
 <div class="container">
   
-  <div class="clearfix mb">
-    <div class="pull-left">12 contradictions</div>
-    <div class="pull-right"><a href="#" class="btn btn-success">Edit</a></div>
-  </div>
 
-<% for i in 1..3 do %>
-  <div class="bg-grey p- mb">
-    <div class="clearfix mb">
-      <div class="pull-left">
-      <i class="fa fa-caret-up"></i>
-      TC<%= i %>
-      <i class="fa fa-caret-down"></i>
+  <div class="row">
+    <div class="col-sm-8 col-sm-offset-2 mb+ pb+">
+
+      <div class="clearfix mb">
+        <div class="pull-left"><h1>12 contradictions</h1></div>
+        <div class="pull-right"><a href="#" class="btn btn-outline-grey">Edit</a></div>
       </div>
-      <div class="pull-right">Lorem ipsum / v/s ipsum loren</div>
+
+      <% for i in 1..3 do %>
+
+      <div class="card mb">
+
+        <div class="card__handles">
+          <i class="ionicons ion-ios-arrow-up color-white"></i>
+          <i class="ionicons ion-ios-arrow-down color-white"></i>
+        </div>
+
+        <div class="p+">
+
+            <p class="h1 pull-left">TC<%= i %></p>
+
+            <table class="table table-bordered bg-white mb0" style="margin-left: 50%; width: 50%;">
+              <tr>
+                <th colspan="2"><div class="text-center">Action parameter</div></th>
+              </tr>
+              <tr>
+                <th><div class="text-uppercase text-center color-grey-light">Strenght</div></th>
+                <th><div class="text-uppercase text-center color-grey-light">Weakness</div></th>
+              </tr>
+            </table>
+
+            <table class="table table-bordered bg-white">
+              <tbody>
+                <tr>
+                  <td valign="center" style="width: 50%;">Lorem ipsum</td>
+                  <td class="text-center">
+                    <i class="fa fa-2 fa-smile-o color-green"></i>
+                  </td>
+                  <td class="text-center"><i class="fa fa-2 fa-frown-o color-pink"></i></td>
+                </tr>
+                <tr>
+                  <td style="width: 50%;">Lorem ipsum</td>
+                  <td class="text-center">
+                    <i class="fa fa-2 fa-frown-o color-pink"></i>
+                  </td>
+                  <td class="text-center">
+                    <i class="fa fa-2 fa-smile-o color-green"></i>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+        </div>
+        <div class="bg-grey-light pl+ pr+ pt pb">
+          
+          <div class="clearfix">
+            <span class="label label-default mr- mb- pull-left">
+              <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
+              <span class="label__text">Store enery in spring</span>
+            </span>
+            
+            <span class="label label-default mr- mb- pull-left">
+              <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
+              <span class="label__text">Claw linked linked</span>
+            </span>
+            
+            <span class="label label-default mr- mb- pull-left">
+              <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
+              <span class="label__text">Rolling contact</span>
+            </span>
+          </div>
+          
+          <p class="mt"><strong>Lorem ipsum dolor</strong> sit amet, <strong>consectetur adipiscing elit</strong>. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. <strong>Proin sodales pulvinar tempor</strong>.</p>
+        </div>
+      </div>
+      <% end %>
     </div>
-    <table class="table bg-grey-light">
-      <thead>
-        <tr>
-          <th></th>
-          <th>Force</th>
-          <th>Faiblesse</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Lorem ipsum</td>
-          <td>
-            <i class="fa fa-smile-o color-green"></i>
-          </td>
-          <td><i class="fa fa-frown-o color-red"></i></td>
-        </tr>
-        <tr>
-          <td>Lorem ipsum</td>
-          <td>
-            <i class="fa fa-frown-o color-red"></i>
-          </td>
-          <td>
-            <i class="fa fa-smile-o color-green"></i>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <span class="label label-default">LER Pawl on excentric + 2nd pawl</span>
-    <span class="label label-default">Claw linked linked to pawl by toggle</span>
-    <span class="label label-default">Rolling contact</span>
-    <p class="mt"><strong>Lorem ipsum dolor</strong> sit amet, <strong>consectetur adipiscing elit</strong>. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. <strong>Proin sodales pulvinar tempor</strong>.</p>
-  </div>
-<% end %>
+</div>
+
 </div>
 
 
 
-<nav class="navbar navbar-default navbar-fixed-bottom">
-  <div class="pull-left">
-    <i class="fa fa-arrow-left"></i>
-    <%= link_to("Back", "transition.html") %>
-  </div>
-  <div class="pull-right">
-    Last modified on 03/12/2017 at 12:17,
-    By Denis C. - INSA
-      <%= link_to("Continue", "transition-4.html", class:"btn btn-primary btn-lg") %></div>
-</nav>
+<%= partial "partials/action-bar", :locals => { :text => "Last modified on 03/12/2017 à 12:17,",:text2 => "Par Denis C. - INSA", :link => "transition-5.html", :link_back => "analysis-3.html" } %>
