--- a/source/analysis-6.html.erb
+++ b/source/analysis-6.html.erb
@@ -1,62 +1,141 @@
-<div class="panel panel-default p-">
-  <div class="container">
+<%= partial "partials/second-nav" %>
+
+<div class="container mt mb+">
     <div class="row">
-      <div class="col-sm-8">
-        <p class="text-left">Selection > Categorizarion > Connection PBSOL > Contradictions > Business Drivers > Evaluation criteria > Evaluation</p>
-        <p class="text-left">
-          Select a variety of relevant patents for the project
-        </p>
+      <div class="col-sm-9">
+        <ul class="breadcrumbs">
+          <li>Sélection</li>
+          <li>Categorizarion</li>
+          <li>Extraction</li>
+          <li>Contradictions</li>
+          <li>Business Drivers</li>
+          <li class="active">Evaluation criteria</li>
+          <li class="next">Evaluation</li>
+        </ul>
+        <p class="text-left text-italic color-grey text-light mt-">Define your evaluation criteria and group them by Business Drivers</p>
       </div>
-      <div class="col-sm-4">
-          Progress <br>
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
-              70% Complete
-            </div>
-          </div>
+      <div class="col-sm-3">
+          <%= partial "partials/progress", :locals => { :percentage => "70", :step_name => "Patent analysis" } %>
       </div>
-    </div>
   </div>
 </div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm-8">
-        <div class="clearfix mb">
-          <div class="pull-left">
-            5 Business drivers
+<div class="container mb+ pb+">
+  <div class="row df">
+    <div class="col-sm-8 pr0">
+      <div class="card p card--separator">
+        <h1 class="mt">5 Business drivers</h1>
+      </div>
+      
+        <div class="card card--separator p">
+          <div class="pl pr">
+            
+            <h3 class="text-bold h4 mb color-blue-dark">Operating effort</h3>
+
+            <div class="drop-area p clearfix">
+              <% for i in 0..2 do %>
+                <span class="label label-default pull-left mr- mb- df at-c">
+                  <i class="ionicons ion-pricetag color-grey-light mr- font-14 pull-left"></i>
+                  <span class="label__text">LER Pawl on excentric + 2nd pawl</span>
+                  <i class="ionicons ion-android-close pull-right color-grey-light font-14 ml"></i>
+                </span>
+              <% end %>
+            </div>
+            
+            
           </div>
-          <a href="#" class="btn btn-success pull-right">Edit</a>
+        </div>
+
+        <div class="card card--separator p">
+          <div class="pl pr">
+            
+            <h3 class="text-bold h4 mb color-blue-dark">Noise</h3>
+
+            <div class="drop-area p clearfix">
+              <% for i in 0..2 do %>
+                <span class="label label-default pull-left mr- mb- df at-c">
+                  <i class="ionicons ion-pricetag color-grey-light mr- font-14 pull-left"></i>
+                  <span class="label__text">LER Pawl on excentric + 2nd pawl</span>
+                  <i class="ionicons ion-android-close pull-right color-grey-light font-14 ml"></i>
+                </span>
+              <% end %>
+            </div>
+            
+            
+          </div>
+        </div>
+
+        <div class="card card--separator p">
+          <div class="pl pr">
+            
+            <h3 class="text-bold h4 mb color-blue-dark">Product cost</h3>
+
+            <div class="drop-area p clearfix">
+              
+            </div>
+            
+            
+          </div>
+        </div>
+
+        <div class="card card--separator p">
+          <div class="pl pr">
+            
+            <h3 class="text-bold h4 mb color-blue-dark">Fail safe</h3>
+
+            <div class="drop-area p clearfix">
+              
+            </div>
+            
+            
+          </div>
+        </div>
+
+        <div class="card card--separator p">
+          <div class="pl pr">
+            
+            <h3 class="text-bold h4 mb color-blue-dark">Space Roominess</h3>
+
+            <div class="drop-area p clearfix">
+              
+            </div>
+            
+            
+          </div>
         </div>
       
 
-      <% for i in 0..4 do %>
-        <div class="panel bg-grey mb- p">
-            <div class="clearfix">              
-              <p class="pull-left">Operating effort</p>
-            </div>
-          
-            <span class="label label-primary">LER Pawl on excentric + 2nd pawl <i class="fa fa-times"></i></span>
-            <span class="label label-primary">LER Pawl on excentric + 2nd pawl <i class="fa fa-times"></i></span>
-            <span class="label label-primary">LER Pawl on excentric + 2nd pawl <i class="fa fa-times"></i></span>
-
-        </div>
-      <% end %>
-
     </div>
-    <div class="col-sm-4">
-      <div class="bg-black p">
-        <div class="clearfix">
-          <p class="color-white pull-left mb">12 Evaluation criteria</p>
-          <a href="#" class="pull-right color-white">Edit</a>
+    <div class="col-sm-4 df pl0">
+      <div class="bg-dark-blue-2 p pt+ f-1-0-auto">
+        <div class="clearfix mb">
+          <p class="h1 color-white mb+">12 Evaluation criteria</p>
+          <a href="#" class="btn btn-outline color-white">Edit</a>
         </div>
           <% for i in 0..6 do %>
               
               <div class="clearfix">
-                <span class="label label-primary pull-left mr-">LER Pawl on excentric + 2nd pawl <i class="fa fa-times"></i></span>
-                <div class="pull-left color-white">
-                  <i class="fa fa-check"></i>
-                </div>
+                <span class="label label-primary mr- mb- pull-left">
+                  <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
+                  <span class="label__text">Ease of door closing</span>
+                </span>
+                <div class="color-blue text-condensed font-14 mt- pull-left"><i class="ionicons ion-android-done"></i></div>
+              </div>
+
+              <div class="clearfix">
+                <span class="label label-primary mr- mb- pull-left">
+                  <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
+                  <span class="label__text">Ease of unlatching from full latch</span>
+                </span>
+                <div class="color-blue text-condensed font-14 mt- pull-left"><i class="ionicons ion-android-done"></i></div>
+              </div>
+
+              <div class="clearfix">
+                <span class="label label-primary mr- mb- pull-left">
+                  <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
+                  <span class="label__text">2nd pawl</span>
+                </span>
+                <div class="color-blue text-condensed font-14 mt- pull-left"><i class="ionicons ion-android-done"></i></div>
               </div>
 
           <% end %>
@@ -67,13 +146,4 @@
 
 
 
-<nav class="navbar navbar-default navbar-fixed-bottom">
-  <div class="pull-left">
-    <i class="fa fa-arrow-left"></i>
-    <%= link_to("Back", "transition.html") %>
-  </div>
-  <div class="pull-right">
-    Last modified on 03/12/2017 at 12:17,
-    By Denis C. - INSA
-      <%= link_to("Continue", "transition-6.html", class:"btn btn-primary btn-lg") %></div>
-</nav>
+<%= partial "partials/action-bar", :locals => { :text => "Last modified on 03/12/2017 à 12:17,",:text2 => "Par Denis C. - INSA", :link => "transition-7.html", :link_back => "analysis-6.html" } %>
