--- a/source/analysis-8.html.erb
+++ b/source/analysis-8.html.erb
@@ -1,47 +1,80 @@
-<div class="panel panel-default p-">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-8">
-        <p class="text-left"><strong>Selection > Categorizarion > Connection PBSOL > Contradictions > Business Drivers > Evaluation criteria > Evaluation</strong></p>
-        <p class="text-left">Evaluate the importance of each criteria in every business driver</p>
+<%= partial "partials/second-nav" %>
+
+<div class="container mt mb+">
+    <div class="row no-gutter">
+      <div class="col-sm-9">
+        <ul class="breadcrumbs">
+          <li>Sélection</li>
+          <li>Categorizarion</li>
+          <li>Extraction</li>
+          <li>Contradictions</li>
+          <li>Business Drivers</li>
+          <li>Evaluation criteria</li>
+          <li class="active">Evaluation</li>
+        </ul>
+        <p class="text-left text-italic color-grey text-light mt-">Evaluate each stakeholders technologies by the defined evaluation criteria</p>
       </div>
-      <div class="col-sm-4">
-          Progress <br>
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-              90% Complete
-            </div>
-          </div>
+      <div class="col-sm-3">
+          <%= partial "partials/progress", :locals => { :percentage => "90", :step_name => "Patent analysis" } %>
       </div>
-    </div>
   </div>
 </div>
 
-<div class="container">
+
+<div class="container mb+ pb+">
 
     <% for i in 1..2 do %>
-    <div class="bg-black p mb">
-        <div class="clearfix mb">
-            <p class="color-white">ARM</p>
-        </div>
+    <div class="p mb">
+        
+        <h1 class="mb">ARM</h1>
       
-        <% for i in 0..4 do %>
-          <div class="panel bg-grey mb- p">
-              <div class="clearfix">
-                <p class="pull-left color-white">Parametre d'evaluation</p>
+        
+          <div class="card card--separator p">
+              <div class="df jc-sb at-c">
+                <p>Parametre d'evaluation</p>
                           
-                <div class="pull-right">
-                  State of the art
-                  <div class="btn-group" role="group" aria-label="...">
-                    <button type="button" class="btn btn-default">Worst</button>
-                    <button type="button" class="btn btn-default">Equivalent</button>
-                    <button type="button" class="btn btn-default">Better</button>
+                  <div class="df jc-sb at-c">
+                    <p class="mr">State of the art</p>
+                    <div class="btn-group" role="group" aria-label="...">
+                      <button type="button" class="btn btn-default">Worst</button>
+                      <button type="button" class="btn btn-default active">Equivalent</button>
+                      <button type="button" class="btn btn-default">Better</button>
+                    </div>
                   </div>
 
-                </div>
               </div>
           </div>
-        <% end %>
+          <div class="card card--separator p">
+              <div class="df jc-sb at-c">
+                <p>Parametre d'evaluation</p>
+                          
+                  <div class="df jc-sb at-c">
+                    <p class="mr">State of the art</p>
+                    <div class="btn-group" role="group" aria-label="...">
+                      <button type="button" class="btn btn-default">Worst</button>
+                      <button type="button" class="btn btn-default">Equivalent</button>
+                      <button type="button" class="btn btn-default active">Better</button>
+                    </div>
+                  </div>
+
+              </div>
+          </div>
+          <div class="card card--separator p">
+              <div class="df jc-sb at-c">
+                <p>Parametre d'evaluation</p>
+                          
+                  <div class="df jc-sb at-c">
+                    <p class="mr">State of the art</p>
+                    <div class="btn-group" role="group" aria-label="...">
+                      <button type="button" class="btn btn-default active">Worst</button>
+                      <button type="button" class="btn btn-default">Equivalent</button>
+                      <button type="button" class="btn btn-default">Better</button>
+                    </div>
+                  </div>
+
+              </div>
+          </div>
+        
           
     </div>
 
@@ -50,13 +83,4 @@
 
 
 
-<nav class="navbar navbar-default navbar-fixed-bottom">
-  <div class="pull-left">
-    <i class="fa fa-arrow-left"></i>
-    <%= link_to("Back", "transition.html") %>
-  </div>
-  <div class="pull-right">
-    Last modified on 03/12/2017 at 12:17,
-    By Denis C. - INSA
-      <%= link_to("Continue", "transition-7.html", class:"btn btn-primary btn-lg") %></div>
-</nav>
+<%= partial "partials/action-bar", :locals => { :text => "Last modified on 03/12/2017 à 12:17,",:text2 => "Par Denis C. - INSA", :link => "sun-diagram.html", :link_back => "analysis-8.html" } %>
