--- a/source/partials/_second-nav.html.erb
+++ b/source/partials/_second-nav.html.erb
@@ -43,11 +43,17 @@
       <li class="nav-item <%= is_page_active('/analysis-8.html') %>">
         <a class="nav-link" href="#">Analysis</a>
       </li>
-      <% end %>
+      <% else %>
       <li class="nav-item">
+        <a class="nav-link" href="#">Analysis</a>
+      </li>
+      <% end %>
+      
+      <li class="nav-item <%= is_page_active('/sun-diagram.html') %>">
         <a class="nav-link" href="#">SUN Diagram</a>
       </li>
-      <li class="nav-item">
+      
+      <li class="nav-item <%= is_page_active('/export.html') %>">
         <a class="nav-link" href="#">Export</a>
       </li>
     </ul>
