--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -32,54 +32,22 @@
 			z-index: 9;
 		}
 	}
+	&__handles {
+		position: absolute;
+		margin-top: 10px;
+		width: 36px;
+		margin-left: -18px;
+		i {
+			background: $blue;
+			width: 36px;
+			height: 36px;
+			line-height: 36px;
+			text-align: center;
+			border-radius: 50%;
+			margin-bottom: 10px;
+		}
+	}
 	&--separator {
 		border-bottom: solid 2px $light;
-	}
-}
-
-
-.mini-card {
-	border-radius: 6px;
-	background: #fff;
-	position: relative;
-	&--pink {
-		border: solid 1px #F7B4C7;
-		border-right: solid 3px $pink;
-		&.selected {
-			border: none;
-			background: $pink;
-		}
-	}
-	&--green {
-		border: solid 1px #a1E3DF;
-		border-left: solid 3px $green;
-		&.selected {
-			border: none;
-			background: $green;
-		}
-	}
-	&__anchor {
-		position: absolute;
-		color: #fff;
-		display: block;
-		right: -18px;
-		top: 50%;
-		width: 36px;
-		height: 36px;
-		margin-top: -18px;
-		background: rgba(235,42,93,0.20);
-		line-height: 36px;
-		text-align: center;
-		border-radius: 50%;
-		padding: 8px;
-		span {
-			width: 21px;
-			height: 21px;
-			display: block;
-			border: solid 4px #fff;
-			background: $pink;
-			border-radius: 50%;
-			box-shadow: 0 0 5px 0 rgba(0,0,0,0.35);
-		}
 	}
 }
